# multi_uuv

./: CMakeLists.txt  package.xml
config/: rf_params_ground.yaml
launch/: ground_station_node.launch
scripts/: set_eeprom.py
src/: auv_node.py  ground_station_node.py
