<?xml version="1.0"?>
<package format="2">
  <name>multi_uuv</name>
  <version>0.0.0</version>
  <description>multi_uuv</description>
  <maintainer email="thies.lennart.alff@tuhh.de">Thies Lennart Alff</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mavros</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>mavros</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
